--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://rekiran.github.io/tic-tac-toe-game/",
   "name": "tic-tac-toe-game",
   "private": true,
   "version": "0.0.0",
